<resources>
    <string name="app_name">TimeM8</string>
    <string name="title_activity_main_schedule_wmenu">MainScheduleWmenu</string>
    <string name="lorem">Lorem</string>
    <string name="operations">операции:</string>
    <string name="detail_image">detail image</string>
    <string name="horosho">ХОРОШО</string>
    <string name="gained">Заработали:</string>
    <string name="fin_res_static">За эту неделю вы потратили:</string>
    <string name="welcome3static">Кастомизируемый внешний вид</string>
    <string name="welcome3staticDetail">Возможность подобрать цвета приложения по вкусу</string>
    <string name="welcome2staticDetail">Больше не придется вспоминать свои ежедневные задачи</string>
    <string name="welcome2static">Ежедневные задания</string>
    <string name="welcome1static">Основное расписание</string>
    <string name="welcome1staticDetail">Составьте себе недельное расписание и максимально удобно работайте с ним</string>
    <string name="done_welcome_pic">done welcome pic</string>
    <string name="welcome_logo_pic">welcome logo pic</string>
    <string name="example_time_list">10.00-13.00</string>
    <string name="example_type_list">Пара</string>
    <string name="example_class_list">каб. 222</string>
    <string name="example_name_list">Мария Ивановна</string>
    <string name="example_day_row_main">1</string>
    <string name="example_count_row_main">1.</string>
    <string name="example_name_row_main">Алгебра</string>
    <string name="example_time_row_main">00:00</string>
    <string name="example_type_row_main">Пара</string>
    <string name="example_teacher_name_row_main">Мария Ивановна</string>
    <string name="example_class_row_main">222a</string>
    <string name="example_name_row_edit">Обед в столовой</string>
    <string name="example_value_row_edit">120000 ₽</string>
    <string name="example_type_row_edit">Категория:</string>
    <string name="example_name_daily_editor">Название</string>
    <string name="example_desc_daily_editor">Описание</string>
    <string name="example_task_daily_editor">Задач:</string>
    <string name="example_task_daily_checkboxes_editor">задача</string>
    <string name="theme_activity_settings">Нажмите, чтобы выбрать тему приложения</string>
    <string name="main_sett_activity_settings">Настройки основного расписания</string>
    <string name="turn_on_activity_settings">включить уведомления</string>
    <string name="static_notif_activity_settings">Уведомление об уроке за:</string>
    <string name="min_activity_settings">минут</string>
    <string name="save_activity_settings">Сохранить</string>
    <string name="static_import_export_activity_settings">Импорт/экспорт основного расписания</string>
    <string name="import_activity_settings">импорт</string>
    <string name="export_activity_settings">экспорт</string>
    <string name="del_user_data_activity_settings">Удаление пользовательских данных</string>
    <string name="del_main_sch_activity_settings">УДАЛИТЬ ОСНОВНОЕ РАСПИСАНИЕ</string>
    <string name="del_detail_sch_activity_settings">УДАЛИТЬ ДЕТАЛЬНУЮ ИНФОРМАЦИЮ</string>
    <string name="del_daily_activity_settings">УДАЛИТЬ ЕЖЕДНЕВНОЕ РАСПИСАНИЕ</string>
    <string name="skip_welcome_activity">ПРОПУСК</string>
    <string name="next_welcome_activity">ДАЛЕЕ</string>
    <string name="homework_main_sch_det">Домашнее задание:</string>
    <string name="tips_main_sch_det">Заметки:</string>
    <string name="example_name_main_sch_det">Мария Ивановна</string>
    <string name="example_class_main_sch_det">202a</string>
    <string name="time_end_main_editor">1:00</string>
    <string name="count_main_editor">номер</string>
    <string name="count_main_edit">название</string>
    <string name="teacher_main_edit">учитель</string>
    <string name="type_main_edit">тип</string>
    <string name="add_btn_main_edit">Добавить</string>
    <string name="update_btn_main_edit">Обновить</string>
    <string name="del_btn_main_edit">Удалить</string>
    <string name="timeBegin_main_edit">00:00</string>
    <string name="double_dots">:</string>
    <string name="class_main_edit">кабинет</string>
    <string name="homework_det_edit">Домашнее задание</string>
    <string name="tips_det_edit">Заметки</string>
    <string name="save_btnsave_btn">СОХРАНИТЬ</string>
    <string name="color_det_edit">Цвет:</string>
    <string name="attach_det_edit">прикрепить</string>
    <string name="addphoto_det_edit">addPhoto</string>
    <string name="main_daily_btn">ежедневные задания</string>
    <string name="main_main_btn">Основное расписание</string>
    <string name="main_main_editable_btn">Основное расписание</string>
    <string name="time_m8">Time M8</string>
    <string name="your_own_time_management_helper">Your own time management helper</string>
    <string name="main_fin_btn">Финансовая деятельность</string>
    <string name="hint_finance">Вы еще не совершили ни одной операции</string>
    <string name="type_fin_editor">покупка</string>
    <string name="cost_fin_editor">стоимость, ₽</string>
    <string name="save_btn_fin_editor">Сохранить</string>
    <string name="clear_btn_fin_editor">Очистить</string>
    <string name="del_btn_fin_editor">Удалить</string>
    <string name="max_value_fin_editor">максимум этой недели ₽</string>
    <string name="desc_daily_editor">описание</string>
    <string name="name_daily_editor">Название</string>
    <string name="add_daily_editor">добавить</string>
    <string name="del_btn_daily_editor">удалить</string>
    <string name="task_daily_editor">задание</string>
    <string name="added_daily_editor">Добавленные:</string>
    <string name="save_btn_daily_editor">Сохранить</string>
    <string name="clear_btn_daily_editor">очистить</string>
    <string name="del_daily_editor">удалить</string>
    <string name="rep_daily_editor">Дни повтора</string>
</resources>
