<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_row_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_day_row_main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_row_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_count_row_main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_row_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_name_row_main"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Алгебра" />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_row_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_time_row_main" />

        <TextView
            android:id="@+id/txt_row_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_type_row_main" />

        <TextView
            android:id="@+id/txt_row_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_teacher_name_row_main" />

        <TextView
            android:id="@+id/txt_row_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_light"
            android:text="@string/example_class_row_main" />
    </LinearLayout>

</LinearLayout>