<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_green_300">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/welcome2static"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_done_welcome"
            android:contentDescription="@string/done_welcome_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_light"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/welcome2staticDetail"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>