<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="6dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:id="@+id/linearcircle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:padding="5dp"
                        android:text="@string/theme_activity_settings"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.ramotion.circlemenu.CircleMenuView
                        android:id="@+id/circleMenu"
                        android:layout_width="190dp"
                        android:layout_height="190dp"
                        android:layout_marginTop="8dp"
                        app:button_colors="@array/colors"
                        app:button_icons="@array/icons"
                        app:distance="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
                android:animateLayoutChanges="true"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                card_view:cardCornerRadius="4dp"
                android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:divider="@drawable/lin_divider"
            android:showDividers="middle"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/main_sett_activity_settings"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/staticNotif"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center"
                    android:text="@string/turn_on_activity_settings" />
                <Switch
                    android:id="@+id/settingsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik"
                    android:paddingTop="5dp"
                    android:text="@string/static_notif_activity_settings" />

                <EditText
                    android:id="@+id/minutesSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"

                    android:fontFamily="@font/rubik"
                    android:hint="@string/min_activity_settings"
                    android:inputType="number"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/saveMinutes"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/rubik"
                    android:gravity="center"
                    android:text="@string/save_activity_settings"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@string/static_import_export_activity_settings" />
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/importButton"
                        style="@style/AppTheme.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/rubik"
                        android:text="@string/import_activity_settings"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/exportButton"
                        style="@style/AppTheme.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/rubik"
                        android:text="@string/export_activity_settings"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:animateLayoutChanges="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="4dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/del_user_data_activity_settings"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/deleteMainSettBtn"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@string/del_main_sch_activity_settings"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/deleteMainDetailSettBtn"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:text="@string/del_detail_sch_activity_settings"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/deleteFrogSettBtn"
                    style="@style/AppTheme.Button"
                    android:fontFamily="@font/rubik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/del_daily_activity_settings"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>