<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/finResCon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff906d">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik"
            android:text="@string/fin_res_static"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/moneySpend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/moneySpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik_light"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/gainStatic"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="•100р на продукты
•250 на развлечения
•300 на еду в кафе
•100р на продукты
•250 на развлечения
•300 на еду в кафе" />

        <TextView
            android:id="@+id/gainStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik"
            android:text="@string/gained"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/moneyGain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moneySpend" />

        <TextView
            android:id="@+id/moneyGain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/resTip"
            app:layout_constraintEnd_toEndOf="@+id/gainStatic"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gainStatic"
            app:layout_constraintTop_toBottomOf="@+id/gainStatic"
            tools:text="•500р подработка" />

        <TextView
            android:id="@+id/resTip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/rubik_light"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/okFin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Так держать! Вы успешно уложились в указанный максимум" />

        <Button
            android:id="@+id/okFin"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/rubik"
            android:text="@string/horosho"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>